tests/expected_invalid_foreign_fn_proves.diag.out
<input>:6:38: error: foreign functions may not declare `proves`
    public foreign fn validate() -> Unit proves Receipt
                                         ^^^^^^
